--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -p 9190 .",
-    "dev": "webpack --watch"
+    "dev": "webpack serve",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
